--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" [ngbCollapse]="menuCollapsed" id="navbarResponsive">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a routerLink="/form-editor" class="nav-link">Form editor</a>
+                <a routerLink="/form_editor" class="nav-link">Form editor</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
                 <a routerLink="/ecommerce" class="nav-link">
