--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -3,7 +3,7 @@
         Form status: {{ theFormGroup.status | json }}
         <i *ngIf="saveInProgress" class="fa fa-spinner fa-spin" style="font-size:24px"></i>
     </ngb-alert>
-    <div form-item [nodeElement]="(formState$ | async)?.form" [topLevelFormGroup]="theFormGroup" parentFormPath="" [formReadOnly]="formReadOnly$ | async"
+    <div form_item [nodeElement]="(formState$ | async)?.form" [topLevelFormGroup]="theFormGroup" parentFormPath="" [formReadOnly]="formReadOnly$ | async"
         [highlighted]="highlightSvc.highlighted$ | async" *ngIf="(formState$ | async)?.form">
     </div>
 </form>
