--- a/src/app/form/form_datepicker/form_datepicker.component.html
+++ b/src/app/form/form_datepicker/form_datepicker.component.html
@@ -1,7 +1,7 @@
 <label [for]="nodeElement.propertyName">{{nodeElement.propertyName}}</label>
 <ng-container *ngIf="hasControl(parentFormPath)">
     <div class="input-group">
-        <input class="form-control" placeholder="yyyy-mm-dd" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)"
+        <input class="form_control" placeholder="yyyy-mm-dd" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)"
             ngbDatepicker #d="ngbDatepicker" />
         <button class="input-group-addon" (click)="d.toggle()" type="button">
             <i class="fa fa-calendar"></i>
