--- a/src/app/form/form_item/form_item.component.html
+++ b/src/app/form/form_item/form_item.component.html
@@ -1,22 +1,22 @@
-<ng-container *ngIf="nodeElement.nodeName == 'form-grid' || nodeElement.nodeName == 'form-grid-row' || nodeElement.nodeName == 'form-grid-col'">
+<ng-container *ngIf="nodeElement.nodeName == 'form_grid' || nodeElement.nodeName == 'form_grid_row' || nodeElement.nodeName == 'form_grid_col'">
   <ng-container *ngFor="let childEl of nodeElement.childNodes">
-    <div form-tabs [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form-tabs'" [nodeElement]="childEl"
+    <div form_tabs [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form_tabs'" [nodeElement]="childEl"
       [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly" [highlighted]="highlighted"></div>
 
-    <div form-table [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form-table'" [nodeElement]="childEl"
+    <div form_table [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form_table'" [nodeElement]="childEl"
       [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
 
-    <div form-autocomplete [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form-autocomplete'"
+    <div form_autocomplete [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form_autocomplete'"
       [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
 
-    <div form-input [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form-input'" [nodeElement]="childEl"
+    <div form_input [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form_input'" [nodeElement]="childEl"
       [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
-    <div form-datepicker [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form-datepicker'"
+    <div form_datepicker [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form_datepicker'"
       [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
-    <div form-timepicker [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form-timepicker'"
+    <div form_timepicker [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form_timepicker'"
       [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
 
-    <div form-item [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form-grid' || childEl.nodeName == 'form-grid-row' || childEl.nodeName == 'form-grid-col'"
+    <div form_item [class.form-item-highlight]="highlighted===childEl._id" *ngIf="childEl.nodeName == 'form_grid' || childEl.nodeName == 'form_grid_row' || childEl.nodeName == 'form_grid_col'"
       [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath" [formReadOnly]="formReadOnly"
       [highlighted]="highlighted"></div>
 
