--- a/src/app/form/form_table/form_table.component.html
+++ b/src/app/form/form_table/form_table.component.html
@@ -2,23 +2,23 @@
     <thead>
         <tr>
             <ng-container *ngFor="let child of nodeElement.childNodes" [ngSwitch]="child.nodeName">
-                <ng-container *ngSwitchCase="'form-autocomplete'">
+                <ng-container *ngSwitchCase="'form_autocomplete'">
                     <th *ngFor="let propName of child.attributes?.copiedProperties">{{propName}}</th>
                 </ng-container>
-                <th *ngSwitchCase="'form-input'">{{child.propertyName}}</th>
+                <th *ngSwitchCase="'form_input'">{{child.propertyName}}</th>
             </ng-container>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let rowControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index">
             <ng-container *ngFor="let child of nodeElement.childNodes" [ngSwitch]="child.nodeName">
-                <ng-container *ngSwitchCase="'form-autocomplete'">
+                <ng-container *ngSwitchCase="'form_autocomplete'">
                     <td *ngFor="let columnControl of getChildProperties(child,idx); let colIdx = index">
                         <input type="text" [id]="parentFormPath + '.' + idx + '.' + child.entityName + '.' + getCopiedPropertyName(child, colIdx)"
                             [formControl]="columnControl" />
                     </td>
                 </ng-container>
-                <td *ngSwitchCase="'form-input'">
+                <td *ngSwitchCase="'form_input'">
                     <input type="text" [id]="parentFormPath + '.' + idx + '.' + child.propertyName" [formControl]="topLevelFormGroup.get(parentFormPath + '.' + idx + '.' + child.propertyName)"
                     />
                 </td>
