--- a/src/app/form/form_tabs/form_tabs.component.html
+++ b/src/app/form/form_tabs/form_tabs.component.html
@@ -1,7 +1,7 @@
 <ngb-tabset>
   <ngb-tab *ngFor="let childControl of topLevelFormGroup.get(parentFormPath)?.controls; let idx = index" [title]="tabNames[idx]">
     <ng-template ngbTabContent>
-      <div form-item [class.form-item-highlight]="highlighted===childControl._id" [nodeElement]="nodeElement.childNodes[0]" [topLevelFormGroup]="topLevelFormGroup"
+      <div form_item [class.form-item-highlight]="highlighted===childControl._id" [nodeElement]="nodeElement.childNodes[0]" [topLevelFormGroup]="topLevelFormGroup"
         [parentFormPath]="parentFormPath + '.' + idx" [formReadOnly]="formReadOnly" [highlighted]="highlighted"></div>
     </ng-template>
   </ngb-tab>
