--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -1,38 +1,40 @@
-<div [class.ml-2]="!node||node.children.length===0" [class.selected]="selected" [class.dragme]="isHover&&node.canDrag" class="d-flex mwz-tree-node"
-    (click)="select()" (mouseenter)="hover(true)" (mouseleave)="hover(false)" (dragstart)="drag()" [attr.draggable]="node.canDrag">
-    <i *ngIf="node&&node.children.length!==0" (click)="expanded=!expanded" class="mt-2 pt-1 mr-2 fa" [class.fa-chevron-circle-right]="!expanded"
-        [class.fa-chevron-circle-down]="expanded"></i>
-    <!-- <i *ngIf="isHover&&node.canDrag" class="fa fa-hand-paper-o mt-2 ml-1 mr-2"></i> -->
-    <span class="mr-auto p-1">{{node.name}}</span>
-    <div *ngIf="isHover" class="mwz-tree-node-action">
-        <i *ngIf="node.childTypes.length>0" class="fa fa-plus mt-1 mb-1" #popAdd="ngbPopover" container="body" placement="left" [ngbPopover]="addContent"
-            (click)="edited=true" popoverTitle="Add item to {{node.name}}"></i>
-        <ng-template #addContent>
-            <div class="list-group">
-                <a *ngFor="let option of node.childTypes" class="list-group-item list-group-item-action" (click)="addItem(option)">
-                    {{option}}
-                </a>
-            </div>
-            <button type="button" class="btn btn-danger mt-2" (click)="addItem(null)">Cancel</button>
-        </ng-template>
-        <i *ngIf="node.canEdit" class="fa fa-pencil-square-o mt-1 mb-1" (click)="edited=true" #popEditor="ngbPopover" container="body"
-            placement="left" [ngbPopover]="editContent" popoverTitle="Editing {{node.name}}"></i>
-        <ng-template #editContent>
-            <meta-item-editor [element]="node" (finished)="finishEditing($event)"></meta-item-editor>
-        </ng-template>
-        <i *ngIf="node.canDelete" class="fa fa-trash-o mt-1 mb-1" (click)="delete()"></i>
+<ng-container *ngIf='node != null'>
+    <div [class.ml-2]="!node||node.children.length===0" [class.selected]="selected" [class.dragme]="isHover&&node?.canDrag" class="d-flex mwz-tree-node"
+        (click)="select()" (mouseenter)="hover(true)" (mouseleave)="hover(false)" (dragstart)="drag()" [attr.draggable]="node.canDrag">
+        <i *ngIf="node&&node.children.length!==0" (click)="expanded=!expanded" class="mt-2 pt-1 mr-2 fa" [class.fa-chevron-circle-right]="!expanded"
+            [class.fa-chevron-circle-down]="expanded"></i>
+        <!-- <i *ngIf="isHover&&node.canDrag" class="fa fa-hand-paper-o mt-2 ml-1 mr-2"></i> -->
+        <span class="mr-auto p-1">{{node.name}}</span>
+        <div *ngIf="isHover" class="mwz-tree-node-action">
+            <i *ngIf="node.childTypes.length>0" class="fa fa-plus mt-1 mb-1" #popAdd="ngbPopover" container="body" placement="left" [ngbPopover]="addContent"
+                (click)="edited=true" popoverTitle="Add item to {{node.name}}"></i>
+            <ng-template #addContent>
+                <div class="list-group">
+                    <a *ngFor="let option of node.childTypes" class="list-group-item list-group-item-action" (click)="addItem(option)">
+                        {{option}}
+                    </a>
+                </div>
+                <button type="button" class="btn btn-danger mt-2" (click)="addItem(null)">Cancel</button>
+            </ng-template>
+            <i *ngIf="node.canEdit" class="fa fa-pencil-square-o mt-1 mb-1" (click)="edited=true" #popEditor="ngbPopover" container="body"
+                placement="left" [ngbPopover]="editContent" popoverTitle="Editing {{node.name}}"></i>
+            <ng-template #editContent>
+                <meta-item-editor [element]="node" (finished)="finishEditing($event)"></meta-item-editor>
+            </ng-template>
+            <i *ngIf="node.canDelete" class="fa fa-trash-o mt-1 mb-1" (click)="delete()"></i>
+        </div>
     </div>
-</div>
-<div class="ml-2 pl-2" [class.parent-trace-none]="dragSvc.dropTarget?.parent!==node.id" *ngIf="node" [class.d-none]="!expanded"
-    [class.parent-trace]="dragSvc.dropTarget?.parent===node.id">
-    <div *ngIf="node.children[0]" class="drag-anchor mt-1 " [class.drop-request-ok]="dragSvc.dropTarget?.target===node.children[0].id && !dragSvc.dropTarget?.after"
-        (dragover)="dropAvailable(node.children[0].id,node.id,false,$event) " (drop)="drop() " (dragleave)="dragOut() "></div>
-    <div *ngIf="node.children.length===0" class="drag-anchor mt-1 " [class.drop-request-ok]="dragSvc.dropTarget?.parent===node.id&&node.childTypes.length!==0"
-        (dragover)="dropAvailable(null,node.id,false,$event) " (drop)="drop() " (dragleave)="dragOut() "></div>
-    <div *ngFor="let c of node.children ">
-        <mwz-tree [node]="c " [index]="c.index " (change)="childChange($event) "></mwz-tree>
-        <div class="drag-anchor mt-1 " [class.drop-request-ok]="dragSvc.dropTarget?.target===c.id && dragSvc.dropTarget?.after" (dragover)="dropAvailable(c.id,node.id,true,$event) "
-            (drop)="drop() " (dragleave)="dragOut() "></div>
-    </div>
+    <div class="ml-2 pl-2" [class.parent-trace-none]="dragSvc.dropTarget?.parent!==node.id" *ngIf="node" [class.d-none]="!expanded"
+        [class.parent-trace]="dragSvc.dropTarget?.parent===node.id">
+        <div *ngIf="node.children[0]" class="drag-anchor mt-1 " [class.drop-request-ok]="dragSvc.dropTarget?.target===node.children[0].id && !dragSvc.dropTarget?.after"
+            (dragover)="dropAvailable(node.children[0].id,node.id,false,$event) " (drop)="drop() " (dragleave)="dragOut() "></div>
+        <div *ngIf="node.children.length===0" class="drag-anchor mt-1 " [class.drop-request-ok]="dragSvc.dropTarget?.parent===node.id&&node.childTypes.length!==0"
+            (dragover)="dropAvailable(null,node.id,false,$event) " (drop)="drop() " (dragleave)="dragOut() "></div>
+        <div *ngFor="let c of node.children ">
+            <mwz-tree [node]="c " [index]="c.index " (change)="childChange($event) "></mwz-tree>
+            <div class="drag-anchor mt-1 " [class.drop-request-ok]="dragSvc.dropTarget?.target===c.id && dragSvc.dropTarget?.after" (dragover)="dropAvailable(c.id,node.id,true,$event) "
+                (drop)="drop() " (dragleave)="dragOut() "></div>
+        </div>
 
-</div>
+    </div>
+</ng-container>
