--- a/src/app/form/form_autocomplete/form_autocomplete.component.html
+++ b/src/app/form/form_autocomplete/form_autocomplete.component.html
@@ -1,6 +1,6 @@
 <label>{{nodeElement.entityName}}</label>
 <div class="form_group mwz-form-autocomplete" [formGroup]="topLevelFormGroup" *ngFor="let propName of nodeElement.attributes?.copiedProperties">
     <label [for]="nodeElement.propertyName + '/' + propName">{{nodeElement.entityName}}/{{propName}}</label>
-    <input class="form_control" type="text" [id]="parentFormPath + '.' + propName" [formControl]="topLevelFormGroup.get(parentFormPath + '.' + propName)"
+    <input class="form-control" type="text" [id]="parentFormPath + '.' + propName" [formControl]="topLevelFormGroup.get(parentFormPath + '.' + propName)"
         *ngIf="hasControl(parentFormPath + '.' + propName)" />
 </div>
