--- a/src/app/form/form_input/form_input.component.html
+++ b/src/app/form/form_input/form_input.component.html
@@ -1,3 +1,3 @@
 <label [for]="nodeElement.propertyName">{{nodeElement.propertyName}}</label>
-<input class="form_control" type="text" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" *ngIf="hasControl(parentFormPath)"
+<input class="form-control" type="text" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" *ngIf="hasControl(parentFormPath)"
 />
