--- a/src/app/tree/meta-item-editor/meta-item-editor.component.html
+++ b/src/app/tree/meta-item-editor/meta-item-editor.component.html
@@ -1,8 +1,8 @@
 <form novalidate [formGroup]="metaItemForm" (ngSubmit)="save()">
   <div class="form_group" *ngFor="let d of element.descriptor">
     <label class="col-form-label" [attr.for]="d.property">{{d.property}}</label>
-    <input *ngIf="d.type==='text'" [formControlName]="d.property" type="text" class="form_control" [attr.id]="d.property">
-    <select *ngIf="d.type==='select'" [formControlName]="d.property" class="form_control" [attr.id]="d.property">
+    <input *ngIf="d.type==='text'" [formControlName]="d.property" type="text" class="form-control" [attr.id]="d.property">
+    <select *ngIf="d.type==='select'" [formControlName]="d.property" class="form-control" [attr.id]="d.property">
       <option *ngFor="let p of editOptions.properties" [value]="p.name">{{p.name}}</option>
     </select>
   </div>
