--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-primary d-print-none">
-    <a href="/" class="navbar-brand">Metawiz</a>
+    <a href="/" class="navbar-brand">FormulaDB</a>
     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
         aria-expanded="false" (click)="menuCollapsed = !menuCollapsed" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
