--- a/src/app/form/form_autocomplete/form_autocomplete.component.html
+++ b/src/app/form/form_autocomplete/form_autocomplete.component.html
@@ -1,5 +1,5 @@
 <label>{{nodeElement.entityName}}</label>
-<div class="form_group mwz-form-autocomplete" [formGroup]="topLevelFormGroup" *ngFor="let propName of nodeElement.attributes?.copiedProperties">
+<div class="form_group mwz-form-autocomplete" [formGroup]="topLevelFormGroup" *ngFor="let propName of nodeElement.copiedProperties">
     <label [for]="nodeElement.propertyName + '/' + propName">{{nodeElement.entityName}}/{{propName}}</label>
     <input class="form-control" type="text" [id]="parentFormPath + '.' + propName" [formControl]="topLevelFormGroup.get(parentFormPath + '.' + propName)"
         *ngIf="hasControl(parentFormPath + '.' + propName)" />
