--- a/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
@@ -40,9 +40,9 @@
             <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
               <a class="dropdown-item" disabled href="javascript:void(0)"><i class="material-icons">palette</i> Themes</a>
               <div class="divider"></div>
-              <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="30" width="40" src="/assets/light.jpg" /> Light</a>
-              <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="30" width="40" src="/assets/material.jpg" /> Material</a>
-              <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="30" width="40" src="/assets/nowui.jpg" /> NowUI</a>
+              <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="30" width="40" src="/assets/light.jpg" /> Light Theme</a>
+              <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="30" width="40" src="/assets/material.jpg" /> Material Theme</a>
+              <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="30" width="40" src="/assets/nowui.jpg" /> NowUI Theme</a>
               <div class="divider"></div>
               <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">library_books</i>Edit Tables</a>
               <a class="dropdown-item" href="javascript:void(0)"><i class="material-icons">view_module</i>Edit Forms</a>
