--- a/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
@@ -45,15 +45,11 @@
             <a class="dropdown-item" disabled href="javascript:void(0)"><i class="now-ui-icons design_palette"></i>
               Themes</a>
             <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="30" width="40" src="/assets/light.jpg" />
-              Light</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="30" width="40" src="/assets/material.jpg" />
-              Material</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="30" width="40" src="/assets/nowui.jpg" />
-              NowUI</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="30" width="40" src="/assets/light.jpg" /> Light Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="30" width="40" src="/assets/material.jpg" /> Material Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="30" width="40" src="/assets/nowui.jpg" /> NowUI Theme</a>
             <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)"><i class="now-ui-icons files_single-copy-04"></i>Edit
-              Tables</a>
+            <a class="dropdown-item" href="javascript:void(0)"><i class="now-ui-icons files_single-copy-04"></i>Edit Tables</a>
             <a class="dropdown-item" href="javascript:void(0)"><i class="now-ui-icons education_paper"></i>Edit Forms</a>
             <div class="divider"></div>
             <a class="dropdown-item" href="javascript:void(0)"><i class="now-ui-icons users_single-02"></i>Account</a>
