--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -38,13 +38,23 @@
             <span class="no-icon"><i class="nc-icon nc-settings-gear-64"></i></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
-            <span class="dropdown-item" disabled href="javascript:void(0)">
+            <a class="dropdown-item" href="javascript:void(0)">
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('red')" style="color: red; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('green')" style="color: green; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('blue')" style="color: blue; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('purple')" style="color: purple; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('orange')" style="color: orange; cursor: pointer"></i> 
-            </span>
+                &nbsp;
+            </a>
+            <div class="divider"></div>
+            <a class="dropdown-item" disabled href="javascript:void(0)">
+                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-4.jpg')" src="/assets/default-theme/img/sidebar-4.jpg" style="margin-right: 4px" />
+                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-1.jpg')" src="/assets/default-theme/img/sidebar-1.jpg" style="margin-right: 4px" />
+                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-2.jpg')" src="/assets/default-theme/img/sidebar-2.jpg" style="margin-right: 4px" />
+                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-3.jpg')" src="/assets/default-theme/img/sidebar-3.jpg" style="margin-right: 4px" />
+                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-5.jpg')" src="/assets/default-theme/img/sidebar-5.jpg" style="margin-right: 4px" />
+            </a>
+            <div class="divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="30" width="40" src="/assets/light.jpg" /> Light Theme</a>
             <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="30" width="40" src="/assets/material.jpg" /> Material Theme</a>
             <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="30" width="40" src="/assets/nowui.jpg" /> NowUI Theme</a>
