--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -20,7 +20,7 @@
         <li class="dropdown nav-item" ngbDropdown placement="bottom-right">
           <a href="javascript:void(0)" class="dropdown-toggle nav-link" data-toggle="dropdown" id="TopNavNotifs"
             ngbDropdownToggle>
-            <i class="nc-icon nc-planet"></i>
+            <i class="nc-icon nc-bell-55"></i>
             <span class="notification">5</span>
             <span class="d-lg-none">Notification</span>
           </a>
@@ -48,19 +48,22 @@
             </a>
             <div class="divider"></div>
             <a class="dropdown-item" disabled href="javascript:void(0)">
-                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-4.jpg')" src="/assets/default-theme/img/sidebar-4.jpg" style="margin-right: 4px" />
-                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-1.jpg')" src="/assets/default-theme/img/sidebar-1.jpg" style="margin-right: 4px" />
-                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-2.jpg')" src="/assets/default-theme/img/sidebar-2.jpg" style="margin-right: 4px" />
-                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-3.jpg')" src="/assets/default-theme/img/sidebar-3.jpg" style="margin-right: 4px" />
-                <img height="50" width="35" (click)="switchSideBarImage('/assets/default-theme/img/sidebar-5.jpg')" src="/assets/default-theme/img/sidebar-5.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-4.jpg')" src="/assets/sidebar_images/sidebar-4.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-1.jpg')" src="/assets/sidebar_images/sidebar-1.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-2.jpg')" src="/assets/sidebar_images/sidebar-2.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-3.jpg')" src="/assets/sidebar_images/sidebar-3.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-5.jpg')" src="/assets/sidebar_images/sidebar-5.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-6.jpg')" src="/assets/sidebar_images/sidebar-6.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-7.jpg')" src="/assets/sidebar_images/sidebar-7.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-8.jpg')" src="/assets/sidebar_images/sidebar-8.jpg" style="margin-right: 4px" />
+                <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-9.jpg')" src="/assets/sidebar_images/sidebar-9.jpg" style="margin-right: 4px" />
             </a>
             <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="30" width="40" src="/assets/light.jpg" /> Light Theme</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="30" width="40" src="/assets/material.jpg" /> Material Theme</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="30" width="40" src="/assets/nowui.jpg" /> NowUI Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="60" width="80" src="/assets/light.jpg" /> Light Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="60" width="80" src="/assets/material.jpg" /> Material Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="/assets/nowui.jpg" /> NowUI Theme</a>
             <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)"><i class="nc-icon nc-single-copy-04"></i>Edit Tables</a>
-            <a class="dropdown-item" href="javascript:void(0)"><i class="nc-icon nc-grid-45"></i>Edit Forms</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()"><i class="nc-icon nc-settings-90"></i>{{ ((developerMode$ | async) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}</a>
             <div class="divider"></div>
             <a class="dropdown-item" href="javascript:void(0)"><i class="nc-icon nc-circle-09"></i>Account</a>
           </div>
