dirty fix witdh of dropdown menu

--- a/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
@@ -41,7 +41,7 @@
             aria-haspopup="true" aria-expanded="false">
             <span class="no-icon"><i class="now-ui-icons loader_gear"></i></span>
           </a>
-          <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
+          <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings" style="min-width: 350px;">
             <a class="dropdown-item" href="javascript:void(0)">
                 <i class="now-ui-icons design_palette" (click)="switchThemeColorPalette('red')" style="color: red; cursor: pointer"></i> 
                 <i class="now-ui-icons design_palette" (click)="switchThemeColorPalette('green')" style="color: green; cursor: pointer"></i> 
