--- a/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
@@ -37,7 +37,7 @@
               aria-haspopup="true" aria-expanded="false">
               <span class="no-icon"><i class="material-icons">settings</i></span>
             </a>
-            <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
+            <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings" style="min-width: 350px;">
               <a class="dropdown-item" href="javascript:void(0)">
                   <i class="material-icons" (click)="switchThemeColorPalette('red')" style="color: red; cursor: pointer">palette</i> 
                   <i class="material-icons" (click)="switchThemeColorPalette('green')" style="color: green; cursor: pointer">palette</i> 
