--- a/fe/src/app/form/form_datepicker/form_datepicker.component.html
+++ b/fe/src/app/form/form_datepicker/form_datepicker.component.html
@@ -1,4 +1,3 @@
-<edit-panel *ngIf="editMode$|async" [node]="nodeElement"></edit-panel>
 <label [for]="nodeElement.propertyName">{{nodeElement.propertyName}}</label>
 <ng-container *ngIf="hasControl(parentFormPath)">
     <div class="input-group">
@@ -8,3 +7,4 @@
             <i class="fa fa-calendar"></i>
         </button>
     </div>
+</ng-container>
