--- a/fe/src/app/form/form_input/form_input.component.html
+++ b/fe/src/app/form/form_input/form_input.component.html
@@ -1,7 +1,7 @@
-<edit-panel *ngIf="editMode$|async" [node]="nodeElement"></edit-panel>
+<!-- <edit-panel *ngIf="editMode$|async" [node]="nodeElement"></edit-panel> -->
 <label [for]="nodeElement.propertyName">{{nodeElement.propertyName}}</label>
-<input class="form-control" [type]="getType()" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)" *ngIf="hasControl(parentFormPath)"
-/>
+<input class="form-control" [type]="getType()" [name]="parentFormPath" [formControl]="topLevelFormGroup.get(parentFormPath)"
+    *ngIf="hasControl(parentFormPath)" />
 
 <div class="form-input-feedback-invalid" *ngIf="ctrl && ctrl.dirty && ctrl.invalid">
     <div *ngFor="let err of getErrors()">
