--- a/fe/src/app/form/form_input/form_input.component.scss
+++ b/fe/src/app/form/form_input/form_input.component.scss
@@ -8,8 +8,8 @@
             background-color: $gray-300 !important;
         }
     }
-    edit-panel {
-        top: 2rem;
-        left: -0.2rem;
-    }
+    // edit-panel {
+    //     top: 2rem;
+    //     left: -0.2rem;
+    // }
 }
