--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -1,28 +1,23 @@
-<ng-container *ngIf="nodeElement.nodeType == 'form_grid' || nodeElement.nodeType == 'form_grid_row' || nodeElement.nodeType == 'form_grid_col'">
-  <edit-panel *ngIf="editMode$|async" [node]="nodeElement"></edit-panel>
-  <ng-container *ngFor="let childEl of nodeElement.childNodes">
-    <div form_tabs *ngIf="childEl.nodeType == 'form_tabs'" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="getChildPath(childEl)"
-      [formReadOnly]="formReadOnly"></div>
-
-    <div form_table *ngIf="childEl.nodeType == 'form_table'" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup"
-      [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
-
-    <div form_autocomplete *ngIf="childEl.nodeType == 'form_autocomplete'" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup"
-      [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
-
-    <div form_input *ngIf="childEl.nodeType == 'form_input'" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup"
-      [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
-    <div form_datepicker *ngIf="childEl.nodeType == 'form_datepicker'" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup"
-      [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
-    <div form_timepicker *ngIf="childEl.nodeType == 'form_timepicker'" [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup"
-      [parentFormPath]="getChildPath(childEl)" [formReadOnly]="formReadOnly"></div>
-
-    <div form_item *ngIf="childEl.nodeType == 'form_grid' || childEl.nodeType == 'form_grid_row' || childEl.nodeType == 'form_grid_col'"
-      [nodeElement]="childEl" [topLevelFormGroup]="topLevelFormGroup" [parentFormPath]="parentFormPath" [formReadOnly]="formReadOnly"></div>
-
-    <div *ngIf="isUnknownElement(nodeElement)" style="border: 1px solid red;">Child Element NOT KNOWN '{{childEl.nodeType}}' !</div>
-
-  </ng-container>
-</ng-container>
-
-<div *ngIf="isUnknownElement(nodeElement)" style="border: 1px solid red;">Element NOT KNOWN '{{nodeElement.nodeType}}' !</div>
+<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container" (mousedown)="checkHandle($event)"
+  (dragstart)="dragStart($event)" (dragend)="dragEnd($event)" #dragTarget>
+  <div *ngIf="editMode$|async" class="drag-handle" #dragHandle></div>
+  <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
+  <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
+  <form-autocomplete *ngSwitchCase="'form_autocomplete'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-autocomplete>
+  <form-input *ngSwitchCase="'form_input'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-input>
+  <form-datepicker *ngSwitchCase="'form_datepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-datepicker>
+  <form-timepicker *ngSwitchCase="'form_timepicker'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></form-timepicker>
+  <h-layout *ngSwitchCase="'form_grid_row'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></h-layout>
+  <v-layout *ngSwitchCase="'form_grid_col'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></v-layout>
+  <v-layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
+    [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></v-layout>
+  <div *ngSwitchDefault style="border: 1px solid red;">Child Element NOT KNOWN '{{childEl.nodeType}}' !</div>
+</div>
