--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+
 body {
     margin: 0;
 }
@@ -6,28 +7,48 @@ body {
 .form-input-feedback-valid {
     color: green;
 }
+
 .form-input-feedback-invalid {
     color: red;
 }
+
 form div .form-control.ng-dirty.ng-valid:not(form) {
-    background-color: rgb(223, 255, 224); /* green */
+    background-color: rgb(223, 255, 224);
+    /* green */
 }
 
 form div .form-control.ng-touched.ng-invalid:not(form) {
-    background-color: #ffedea; /* red */
+    background-color: #ffedea;
+    /* red */
 }
+
 form div .form-control.ng-dirty.ng-pending:not(form) {
-    background-color: rgb(255, 255, 213); /* green */
+    background-color: rgb(255, 255, 213);
+    /* green */
 }
+
 .ng-pristine:not(form) {
     // border-left: 5px solid #42A948; /* green */
 }
+
 .ng-dirty:not(form) {
     // border-left: 5px solid #42A948; /* green */
 }
+
 .ng-untouched:not(form) {
     // border-left: 5px solid #42A948; /* green */
 }
+
 .ng-touched:not(form) {
     // border-left: 5px solid #42A948; /* green */
+}
+
+.drag-handle {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-right: .6rem solid transparent;
+    border-top: .6rem solid gray;
+    cursor: move;
+    z-index: 1000;
 }
