--- a/fe/src/app/themes/material-dashboard-theme/navigation/navigation.segment.html
+++ b/fe/src/app/themes/material-dashboard-theme/navigation/navigation.segment.html
@@ -2,7 +2,7 @@
     <i *ngIf="entity.children.length>0 && entity.collapsed" class="material-icons" (click)="expand(entity.id, $event)">chevron_right</i>
     <i *ngIf="entity.children.length>0 && !entity.collapsed" class="material-icons" (click)="collapse(entity.id, $event)">expand_more</i>
     <a [routerLink]="[entity.path]" routerLinkActive="active" class="nav-link">
-        <p>{{entity.linkName}}</p>
+        <p>{{entity.linkName | i18n }}</p>
     </a>
     <frmdb-navigation-segment [nav]="entity.children" *ngIf="!entity.collapsed"></frmdb-navigation-segment>
 </li>
