--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -1,6 +1,6 @@
-<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container" (mousedown)="checkHandle($event)"
-  (dragstart)="dragStart($event)" (dragend)="dragEnd($event)" #dragTarget>
-  <div *ngIf="editMode$|async" class="drag-handle" #dragHandle></div>
+<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container"
+  (dragstart)="dragStart($event)" (dragend)="dragEnd($event)">
+  <div *ngIf="editMode$|async" class="drag-handle" #dragHandle [id]="'drag_'+nodeElement._id" (mousedown)="checkHandle($event)"></div>
   <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
   <div form_table *ngSwitchCase="'form_table'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
