--- a/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
@@ -39,6 +39,19 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings" style="min-width: 350px;">
               <a class="dropdown-item" href="javascript:void(0)">
+                <img src="/assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/de.png" (click)="switchLanguage('de')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/fr.png" (click)="switchLanguage('fr')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/es.png" (click)="switchLanguage('es')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/gr.png" (click)="switchLanguage('gr')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/it.png" (click)="switchLanguage('it')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/pl.png" (click)="switchLanguage('pl')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/pt.png" (click)="switchLanguage('pt')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/ro.png" (click)="switchLanguage('ro')" style="margin-right: 5px; cursor: pointer" />
+                <img src="/assets/flags/sv.png" (click)="switchLanguage('sv')" style="margin-right: 5px; cursor: pointer" />
+                &nbsp;
+              </a>
+                <a class="dropdown-item" href="javascript:void(0)">
                   <i class="material-icons" (click)="switchThemeColorPalette('red')" style="color: red; cursor: pointer">palette</i> 
                   <i class="material-icons" (click)="switchThemeColorPalette('green')" style="color: green; cursor: pointer">palette</i> 
                   <i class="material-icons" (click)="switchThemeColorPalette('blue')" style="color: blue; cursor: pointer">palette</i> 
