--- a/fe/src/app/form/form_item/form_item.component.html
+++ b/fe/src/app/form/form_item/form_item.component.html
@@ -1,5 +1,5 @@
-<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container"
-  (dragstart)="dragStart($event)" (dragend)="dragEnd($event)">
+<div [ngSwitch]="nodeElement.nodeType" draggable="true" class="layout-container" (dragstart)="dragStart($event)"
+  (dragend)="dragEnd($event)">
   <div *ngIf="editMode$|async" class="drag-handle" #dragHandle [id]="'drag_'+nodeElement._id" (mousedown)="checkHandle($event)"></div>
   <div form_tabs *ngSwitchCase="'form_tabs'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></div>
@@ -20,4 +20,5 @@
   <v-layout *ngSwitchCase="'form_grid'" [nodeElement]="nodeElement" [topLevelFormGroup]="topLevelFormGroup"
     [parentFormPath]="getChildPath(nodeElement)" [formReadOnly]="formReadOnly"></v-layout>
   <div *ngSwitchDefault style="border: 1px solid red;">Child Element NOT KNOWN '{{childEl.nodeType}}' !</div>
+  <form-context-menu [item]="nodeElement" *ngIf="editMode$|async"></form-context-menu>
 </div>
