added formula input in top-nav

--- a/fe/src/app/themes/default-theme/layout/layout.component.html
+++ b/fe/src/app/themes/default-theme/layout/layout.component.html
@@ -40,7 +40,9 @@
             </span>
             <span style="font-size: 70%; color: grey">
               ( webdesign &copy; 2018
-              <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web )
+              <a href="http://www.creative-tim.com">Creative Tim</a>,
+              Some icons by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+              )
             </span>
           </p>
         </nav>
