--- a/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/material-dashboard-theme/top-nav/top-nav.component.html
@@ -16,6 +16,12 @@
             <input type="text" value="" class="form-control" placeholder="Search...">
           </div>
         </form>
+        <form class="navbar-form navbar-right navbar-search-form" role="search">
+          <div class="input-group">
+            <img src="/assets/img/formula16.png" width="16" height="16" style="margin-top: 10px" />
+            <input type="text" value="" class="form-control" placeholder="FORMULA...">
+          </div>
+        </form>  
         <ul class="navbar-nav ml-auto">
           <li class="dropdown nav-item" ngbDropdown placement="bottom-right">
             <a href="javascript:void(0)" class="dropdown-toggle nav-link" data-toggle="dropdown" id="TopNavNotifs"
