--- a/fe/src/app/table/table.component.html
+++ b/fe/src/app/table/table.component.html
@@ -1,6 +1,6 @@
 <div class="mwz-table-placeholder">&nbsp;</div>
 <div class="mwz-table-wrapper">
-    <ag-grid-angular #agGrid class="ag-theme-material" [rowData]="data" enableColResize="true" (rowDoubleClicked)="onRowDoubleClicked($event)"
+    <ag-grid-angular #agGrid class="ag-theme-material" rowHeight="25" [rowData]="data" enableColResize="true" (rowDoubleClicked)="onRowDoubleClicked($event)"
         enableSorting="true" enableFilter="true" (gridReady)="onGridReady($event)" (columnMoved)="columnMoving($event)" (dragStopped)="columnMoved($event)"
         (columnResized)="columnResized($event)" (filterChanged)="filterChanged($event)" (sortChanged)="sortChanged($event)"></ag-grid-angular>
 </div>
