--- a/fe/src/app/table/table.component.scss
+++ b/fe/src/app/table/table.component.scss
@@ -38,3 +38,15 @@
     width: 100%;
     height: 100%;
 }
+
+::ng-deep .mwz-table-wrapper .ag-cell {
+    line-height: 25px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+::ng-deep .mwz-table-wrapper .ag-header .ag-header-cell {
+    font-weight: bold;
+    padding-left: 5px;
+    padding-right: 5px;
+}
