--- a/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/now-uidashboard-theme/top-nav/top-nav.component.html
@@ -20,6 +20,16 @@
           </div>
         </div>
       </form>
+      <form>
+        <div class="input-group no-border">
+          <input type="text" value="" class="form-control" placeholder="FORMULA...">
+          <div class="input-group-append">
+            <div class="input-group-text">
+              <img src="/assets/img/formula16.png" width="16" height="16" />
+            </div>
+          </div>
+        </div>
+      </form>
       <ul class="navbar-nav ml-auto">
         <li class="dropdown nav-item" ngbDropdown placement="bottom-right">
           <a href="javascript:void(0)" class="dropdown-toggle nav-link" data-toggle="dropdown" id="TopNavNotifs"
