small couchdb perf tests, started using faker.js for mock data

--- a/fe/src/app/themes/default-theme/layout/layout.component.scss
+++ b/fe/src/app/themes/default-theme/layout/layout.component.scss
@@ -18,5 +18,13 @@
         transform: translate3d(0px, 0px, 0px) !important;
     }
 
+    .main-panel .content .container-fluid {
+        padding: 0;
+
+        .row div {
+            padding: 0;
+        }
+    }
+
 }
 
