--- a/fe/src/app/themes/default-theme/layout/layout.component.html
+++ b/fe/src/app/themes/default-theme/layout/layout.component.html
@@ -22,13 +22,13 @@
 
     <!-- End Navbar -->
     <div class="content">
-      <div class="container-fluid">
+      <router-outlet></router-outlet>
+      <!-- <div class="container-fluid">
         <div class="row">
           <div class="col-md-12">
-            <router-outlet></router-outlet>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <footer class="footer">
       <div class="container">
