--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar navbar-expand-lg " color-on-scroll="500">
   <div class=" container-fluid  ">
-    <a class="navbar-brand" href="#pablo">
+    <!-- <a class="navbar-brand" href="#pablo">
       {{ (selectedEntity$ | async)?._id | i18n }}
-    </a>
+    </a> -->
     <button href="" class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" aria-controls="navigation-index"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-bar burger-lines"></span>
@@ -11,12 +11,10 @@
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
       <form class="navbar-form navbar-right navbar-search-form" role="search">
-        <div class="input-group">
+        <!-- <div class="input-group">
           <i class="nc-icon nc-zoom-split"></i>
           <input type="text" value="" class="form-control" placeholder="Search...">
-        </div>
-      </form>
-      <form class="navbar-form navbar-right navbar-search-form" role="search">
+        </div> -->
         <div class="input-group">
           <img src="/assets/img/formula16.png" width="16" height="16" />
           <input type="text" value="" class="form-control" placeholder="FORMULA...">
