--- a/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
+++ b/fe/src/app/themes/default-theme/top-nav/top-nav.component.html
@@ -10,39 +10,34 @@
       <span class="navbar-toggler-bar burger-lines"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-end" id="navigation">
+      <ul class="navbar-nav">
+        <li class="dropdown nav-item" ngbDropdown>
+          <a href="javascript:void(0)" class="dropdown-toggle nav-link" data-toggle="dropdown" id="FormulaEditor"
+            ngbDropdownToggle>
+            <img src="/assets/img/formula16.png" width="16" height="16" />
+          </a>
+          <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="FormulaEditor">
+            Options
+          </ul>
+        </li>
+      </ul>
       <form class="navbar-form navbar-right navbar-search-form" role="search">
-        <!-- <div class="input-group">
-          <i class="nc-icon nc-zoom-split"></i>
-          <input type="text" value="" class="form-control" placeholder="Search...">
-        </div> -->
         <div class="input-group">
-          <img src="/assets/img/formula16.png" width="16" height="16" />
-          <input type="text" value="" class="form-control" placeholder="FORMULA...">
+          <input type="text" [value]="getFormula()" class="form-control" [disabled]="!(developerMode$ | async)" placeholder="FORMULA...">
         </div>
       </form>
       <ul class="navbar-nav ml-auto">
-        <li class="dropdown nav-item" ngbDropdown placement="bottom-right">
-          <a href="javascript:void(0)" class="dropdown-toggle nav-link" data-toggle="dropdown" id="TopNavNotifs"
-            ngbDropdownToggle>
-            <i class="nc-icon nc-bell-55"></i>
-            <span class="notification">5</span>
-            <span class="d-lg-none">Notification</span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavNotifs">
-            <a class="dropdown-item" href="javascript:void(0)">Notification 1</a>
-            <a class="dropdown-item" href="javascript:void(0)">Notification 2</a>
-            <a class="dropdown-item" href="javascript:void(0)">Notification 3</a>
-            <a class="dropdown-item" href="javascript:void(0)">Notification 4</a>
-            <a class="dropdown-item" href="javascript:void(0)">Another notification</a>
-          </ul>
-        </li>
         <li class="nav-item dropdown" ngbDropdown placement="bottom-right">
           <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="TopNavSettings" ngbDropdownToggle
             aria-haspopup="true" aria-expanded="false">
+            <span class="notification">2</span>
             <span class="no-icon"><i class="nc-icon nc-settings-gear-64"></i></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" ngbDropdownMenu aria-labelledby="TopNavSettings">
-            <a class="dropdown-item" href="javascript:void(0)">
+            <a class="dropdown-item" href="javascript:void(0)">Notification 1</a>
+            <a class="dropdown-item" href="javascript:void(0)">Notification 2</a>
+            <div class="divider" *ngIf="developerMode$ | async"></div>
+            <a class="dropdown-item" href="javascript:void(0)" *ngIf="developerMode$ | async">
               <img src="/assets/flags/us.png" (click)="switchLanguage('us')" style="margin-right: 5px; cursor: pointer" />
               <img src="/assets/flags/de.png" (click)="switchLanguage('de')" style="margin-right: 5px; cursor: pointer" />
               <img src="/assets/flags/fr.png" (click)="switchLanguage('fr')" style="margin-right: 5px; cursor: pointer" />
@@ -54,9 +49,9 @@
               <img src="/assets/flags/ro.png" (click)="switchLanguage('ro')" style="margin-right: 5px; cursor: pointer" />
               <img src="/assets/flags/sv.png" (click)="switchLanguage('sv')" style="margin-right: 5px; cursor: pointer" />
               &nbsp;
-          </a>
-          <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)">
+            </a>
+            <div class="divider" *ngIf="developerMode$ | async"></div>
+            <a class="dropdown-item" href="javascript:void(0)" *ngIf="developerMode$ | async">
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('red')" style="color: red; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('green')" style="color: green; cursor: pointer"></i> 
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('blue')" style="color: blue; cursor: pointer"></i> 
@@ -64,8 +59,8 @@
                 <i class="nc-icon nc-palette" (click)="switchThemeColorPalette('orange')" style="color: orange; cursor: pointer"></i> 
                 &nbsp;
             </a>
-            <div class="divider"></div>
-            <a class="dropdown-item" disabled href="javascript:void(0)">
+            <div class="divider" *ngIf="developerMode$ | async"></div>
+            <a class="dropdown-item" disabled href="javascript:void(0)" *ngIf="developerMode$ | async">
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-4.jpg')" src="/assets/sidebar_images/sidebar-4.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-1.jpg')" src="/assets/sidebar_images/sidebar-1.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-2.jpg')" src="/assets/sidebar_images/sidebar-2.jpg" style="margin-right: 4px" />
@@ -76,10 +71,10 @@
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-8.jpg')" src="/assets/sidebar_images/sidebar-8.jpg" style="margin-right: 4px" />
                 <img height="50" width="30" (click)="switchSideBarImage('/assets/sidebar_images/sidebar-9.jpg')" src="/assets/sidebar_images/sidebar-9.jpg" style="margin-right: 4px" />
             </a>
-            <div class="divider"></div>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)"><img height="60" width="80" src="/assets/light.jpg" /> Light Theme</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)"><img height="60" width="80" src="/assets/material.jpg" /> Material Theme</a>
-            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)"><img height="60" width="80" src="/assets/nowui.jpg" /> NowUI Theme</a>
+            <div class="divider" *ngIf="developerMode$ | async"></div>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(0)" *ngIf="developerMode$ | async"><img height="60" width="80" src="/assets/light.jpg" /> Light Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(1)" *ngIf="developerMode$ | async"><img height="60" width="80" src="/assets/material.jpg" /> Material Theme</a>
+            <a class="dropdown-item" href="javascript:void(0)" (click)="switchTheme(2)" *ngIf="developerMode$ | async"><img height="60" width="80" src="/assets/nowui.jpg" /> NowUI Theme</a>
             <div class="divider"></div>
             <a class="dropdown-item" href="javascript:void(0)" (click)="toggleDeveloperMode()"><i class="nc-icon nc-settings-90"></i>{{ ((developerMode$ | async) ? 'Disable-Developer-Mode' : 'Enable-Developer-Mode' ) | i18n}}</a>
             <div class="divider"></div>
