--- a/fe/src/app/form/form-vertical-layout/form-vertical-layout.component.scss
+++ b/fe/src/app/form/form-vertical-layout/form-vertical-layout.component.scss
@@ -5,6 +5,6 @@
     border: 1px dashed;
     border-color: rgba(255, 255, 255, 0);
     &.outline {
-        border-color: magenta;
+        border-color: lightgray;
     }
 }
