--- a/fe/src/app/form/form-horizontal-layout/form-horizontal-layout.component.scss
+++ b/fe/src/app/form/form-horizontal-layout/form-horizontal-layout.component.scss
@@ -6,6 +6,6 @@
     border: 1px dashed;
     border-color: rgba(255, 255, 255, 0);
     &.outline {
-        border-color: navy;
+        border-color: darkgray;
     }
 }
