--- a/fe/src/app/themes/default-theme/navigation/navigation.segment.scss
+++ b/fe/src/app/themes/default-theme/navigation/navigation.segment.scss
@@ -5,4 +5,10 @@
 
 .nav-link {
     display: inline-block !important;
+    padding: .5rem!important;
+    margin:.2rem!important;
+    line-height:1.5!important;
+    p{
+        line-height:1.5!important;
+    }
 }
