--- a/fe/src/app/table/table.component.scss
+++ b/fe/src/app/table/table.component.scss
@@ -2,20 +2,23 @@
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 :host {
-    display: flex;
-    overflow: hidden;
+    // display: flex;
+    // overflow: hidden;
+    width: 100%;
+    height: calc(100% - 150px);
+    position: absolute; 
 }
 
 .mwz-table-placeholder {
-    min-height: 575px;//FIXME: maximum allowed height, percent does not work
+    min-height: 575px; //FIXME: maximum allowed height, percent does not work
 }
 
 .mwz-table-wrapper {
     width: 100%;
-    height:calc(100% - 270px);
-    @include make-col(8);
-    position: fixed;
-    margin-top: .5rem;
+    height: 100%;
+    // @include make-col(8);
+    // position: fixed;
+    // margin-top: .5rem;
 }
 
 .mwz-table-action {
@@ -30,11 +33,11 @@
     }
 }
 
-::ng-deep ag-grid-angular{
+::ng-deep ag-grid-angular {
     height: 100%;
 }
 
-::ng-deep ag-grid-angular > div {
+::ng-deep ag-grid-angular>div {
     width: 100%;
     height: 100%;
 }
